hover problem solved

--- a/script/menu/css/menu.css
+++ b/script/menu/css/menu.css
@@ -328,7 +328,7 @@ border-top:none;
 .dropdown-submenu:hover > a,
 .dropdown-menu .active > a,
 .dropdown-menu .active > a:hover {
-  color: #ffffff;
+  color: #B22222;
   text-decoration: none;
   background-image: none;
   background-image: none;
